# STC_Test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  inout.cpp  inout.h  threadworker.cpp  threadworker.h
test/: CMakeLists.txt
test/GTest/: CMakeLists.txt  sink_mock.h  source_mock.h  test.cpp
test/MainTest/: CMakeLists.txt  main_test.cpp
